fix: Fixed background color flickering in the beginning

--- a/src/App.scss
+++ b/src/App.scss
@@ -34,7 +34,9 @@ body {
   background: var(--bg-color);
   color: var(--font-color);
   font-family: sans-serif;
-  transition: background-color ease 0.3s, color ease 0.3s;
+  &.use-transition {
+    transition: background-color ease 0.3s, color ease 0.3s;
+  }
 }
 button {
   background: inherit;
